fda-126 Fixed reference page for ADAE

--- a/pages/animaldrug/event/reference/_content.yaml
+++ b/pages/animaldrug/event/reference/_content.yaml
@@ -46,6 +46,7 @@
   - animal.reproductive_status
   - animal.species
   - animal.weight
+  - health_assessment_prior_to_exposure
   - health_assessment_prior_to_exposure.assessed_by
 - "#### Drugs"
 - "Information on the drugs taken while the event was experienced."
